Hot fix on mobile view

--- a/fylo.css
+++ b/fylo.css
@@ -4,12 +4,14 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 body {
 	color: white;
-	max-width: 100%;
+	/* max-width: 100%; */
 	background-color: hsl(218, 28%, 13%);
+	overflow-x: clip;
 }
 
 header {
@@ -53,6 +55,10 @@ nav ul li a {
 	display: block;
 }
 
+.description {
+	display: flex;
+	flex-direction: column;
+}
 .description b {
 	font-weight: 700;
 	font-family: "Raleway", sans-serif;
@@ -60,12 +66,10 @@ nav ul li a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	max-width: 81%;
-	margin: auto;
+	max-width: 90%;
 	margin-top: 3rem;
-	line-height: 2rem;
-}
-b {
+	margin-left: 0.35em;
+	line-height: 2.4rem;
 	text-align: center;
 }
 
@@ -79,8 +83,6 @@ b {
 	margin: auto;
 	margin-top: 1.4rem;
 	line-height: 1.5rem;
-}
-p {
 	text-align: center;
 }
 
@@ -191,7 +193,7 @@ p {
 	font-family: "Raleway", sans-serif;
 	margin-top: 0.4rem;
 	line-height: 1.3rem;
-	max-width: 89%;
+	max-width: 88%;
 	font-size: 0.9rem;
 	display: block;
 	margin-left: auto;
@@ -219,14 +221,15 @@ p {
 	font-size: 0.9rem;
 	font-family: "Raleway", sans-serif;
 	text-align: left;
-	max-width: 90%;
+	max-width: 84%;
+	font-size: 14px;
 	margin-left: 1.4rem;
 	line-height: 1.3rem;
 	margin-top: 1rem;
 }
 
 .illustrate-2 .p2 {
-	max-width: 85%;
+	max-width: 80%;
 }
 
 .seehow p {
@@ -288,19 +291,18 @@ p {
 b.wit-name1 {
 	font-size: 10px;
 	display: block;
-	margin-left: -8.5rem;
+	margin-left: rem;
 }
 
 p.wit-work {
-	margin-left: -5.7rem;
 	margin-top: -0.8rem;
 	font-size: 9px;
 }
 
 .wit-info {
 	position: relative;
-	top: -0.7rem;
-	right: -0.3rem;
+	top: -0.8rem;
+	left: 3.6rem;
 }
 
 .quote {
@@ -338,27 +340,25 @@ p.wit-work {
 .witness-info2 img {
 	width: 11%;
 	border-radius: 50%;
-	position: relative;
-	left: 5%;
-	top: 1.2rem;
+	position: absolute;
+	left: 6%;
+    top: 8.7rem;
 }
 
 b.wit-name2 {
 	font-size: 10px;
 	display: block;
-	margin-left: -7.05rem;
 }
 
 p.wit-work2 {
-	margin-left: -5.7rem;
 	margin-top: 0.3rem;
 	font-size: 9px;
 }
 
 .wit-info2 {
 	position: relative;
-	top: -0.7rem;
-	right: -0.3rem;
+	top: 1.7rem;
+	left: 3.7rem;
 }
 
 .testimony-card-3 {
@@ -397,39 +397,39 @@ p.wit-work2 {
 b.wit-name3 {
 	font-size: 10px;
 	display: block;
-	margin-left: -9.35rem;
 }
 
 p.wit-work3 {
-	margin-left: -5.7rem;
 	margin-top: 0.25rem;
 	font-size: 9px;
 }
 
 .wit-info3 {
 	position: relative;
-	top: -0.7rem;
-	right: -0.3rem;
+	top: -0.8rem;
+	left: 3.6rem;
 }
 
 .signup-card {
 	background-color: hsl(217, 28%, 15%);
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 	padding-top: 3rem;
-	width: 90%;
-	border-radius: 3px;
 	height: 26rem;
+	left: 1.17em;
+	max-width: 90%;
+	width: 50.3rem;
+	margin-right: 50px;
+	border-radius: 15px;
 	font-family: "Raleway", sans-serif;
-	margin-top: 2rem;
-	z-index: 1;
-	position: relative;
-	box-shadow: 5px 2px 5px 1px rgba(0, 0, 0, 0.322);
+	margin-top: 10rem;
+	position: absolute;
+	box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.322);
+	z-index: 3;
+	text-align: center;
 }
 
 b.signup {
 	display: block;
+	font-size: 20px;
 }
 
 p.signup-text {
@@ -438,8 +438,7 @@ p.signup-text {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	/* width: 93%; */
-	max-width: 79%;
+	max-width: 80%;
 	font-size: 14px;
 }
 
@@ -460,7 +459,8 @@ p.signup-text {
 .signup-card input::placeholder {
 	color: rgba(97, 96, 96, 0.281);
 	position: relative;
-	left: 12%;
+	left: 8%;
+	font-size: 16px;
 }
 
 .signup-card button {
@@ -482,6 +482,18 @@ p.signup-text {
 	color: white;
 }
 
+footer {
+	margin-top: 21rem;
+	position: relative;
+	background-color: hsl(216, 53%, 9%);
+	z-index: 2;
+	height: 60rem;
+}
+
+.footer-content {
+	position: absolute;
+	margin-top: 20rem;
+}
 .footer-logo {
 	display: block;
 	margin-left: 2rem;
@@ -521,4 +533,27 @@ p.signup-text {
 	position: relative;
 	top: 1.3rem;
 	left: 1.5rem;
+}
+
+.aboutUs-container {
+	display: flex;
+	margin-left: 1.5rem;
+	flex-direction: column;
+}
+
+.aboutUs-container ul li {
+	list-style: none;
+	margin-top: 1rem;
+}
+
+.TP-container {
+	display: flex;
+	flex-direction: column;
+	margin-top: 3rem;
+}
+
+.TP-container ul li {
+	list-style: none;
+	margin-left: 1.5rem;
+	margin-top: 1rem;
 }
